let mockOnDragEndFn: DragEndFnType | undefined = undefined;

type DragEndFnType = (event: DragEndEvent) => void;

type DndContextProps = {
   children: React.ReactNode;
   onDragEnd: DragEndFnType;
};

jest.mock("@dnd-kit/core", () => ({
   ...jest.requireActual("@dnd-kit/core"),
   DndContext: ({ children, onDragEnd }: DndContextProps) => {
      mockOnDragEndFn = onDragEnd;
      return <div data-testid="mock-dnd-context">{children}</div>;
   },
}));

jest.mock("./utils", () => ({
   ...jest.requireActual("./utils"),
   resolveDragEnd: jest.fn(),
}));

import { DragEndEvent } from "@dnd-kit/core";
import { render, screen } from "@testing-library/react";
import userEvent from "@testing-library/user-event";
import {
   assertInDocument,
   assertNotInDocument,
   ctestData,
   dtestData,
} from "@tests";
import { map } from "es-toolkit/compat";
import { FormProvider, useForm } from "react-hook-form";

import { existingTemplateFieldInitValues } from "@/components/shared/template-fields";
import { CallbackFn } from "@/data/types/common";
import { DPromptUpdate, DPromptVariable } from "@/data/types/domain/prompt";
import { DGlobalPromptField } from "@/data/types/domain/settings";

import { PromptVariables } from "./prompt-variables";
import { resolveDragEnd } from "./utils";

const resolveDragEndMock = resolveDragEnd as jest.MockedFunction<
   typeof resolveDragEnd
>;

type Props = {
   fields: DPromptVariable[];
   globalFields: DGlobalPromptField[];
   globalFieldIds: string[];
   detectedVariables: string[];
   onAddField: CallbackFn;
   onRemoveField: (index: number) => void;
   onMoveField?: (from: number, to: number) => void;
   onAddGlobalFieldIds: (ids: string[]) => void;
   onRemoveGlobalFieldId: (id: string) => void;
};

const TestWrapper = ({
   fields,
   globalFields,
   globalFieldIds,
   detectedVariables,
   onAddField,
   onRemoveField,
   onMoveField = jest.fn(),
   onAddGlobalFieldIds,
   onRemoveGlobalFieldId,
}: Props) => {
   const form = useForm<DPromptUpdate>({
      defaultValues: {
         title: "",
         description: "",
         content: "",
         recommendedModel: "Claude",
         categories: [],
         fields: map(fields, existingTemplateFieldInitValues),
         globalFieldIds: [],
      },
   });

   return (
      <FormProvider {...form}>
         <PromptVariables
            fields={fields}
            globalFields={globalFields}
            globalFieldIds={globalFieldIds}
            detectedVariables={detectedVariables}
            onAddField={onAddField}
            onRemoveField={onRemoveField}
            onMoveField={onMoveField}
            onAddGlobalFieldIds={onAddGlobalFieldIds}
            onRemoveGlobalFieldId={onRemoveGlobalFieldId}
            control={form.control}
            watch={form.watch}
         />
      </FormProvider>
   );
};

const assertRendered = () => {
   const variables = screen.getByTestId("prompt-variables");
   const addBtn = screen.getByTestId("add-btn");

   assertInDocument(variables);
   assertInDocument(addBtn);
};

const assertTemplateFieldsRendered = () => {
   const fields = screen.getByTestId("fields");
   const variables = screen.getAllByTestId("prompt-variable");

   assertInDocument(fields);
   expect(variables).toHaveLength(3);
};

const assertTemplateFieldsEmpty = () => {
   const empty = screen.getByTestId("fields-empty");
   const variables = screen.queryAllByTestId("prompt-variable");

   assertInDocument(empty);
   expect(variables).toHaveLength(0);
};

const assertGlobalFieldsRendered = () => {
   const globalFields = screen.getByTestId("prompt-global-variables");
   const fieldItems = screen.getAllByTestId("prompt-global-variable");

   assertInDocument(globalFields);
   expect(fieldItems).toHaveLength(1);
};

const assertGlobalFieldsNotRendered = () => {
   const globalFields = screen.queryByTestId("prompt-global-variables");
   assertNotInDocument(globalFields);
};

describe("PromptVariables rendering tests", () => {
   it("variables empty - test", () => {
      const { container } = render(
         <TestWrapper
            fields={[]}
            globalFields={[]}
            globalFieldIds={[]}
            detectedVariables={[]}
            onAddField={jest.fn()}
            onRemoveField={jest.fn()}
            onAddGlobalFieldIds={jest.fn()}
            onRemoveGlobalFieldId={jest.fn()}
         />
      );

      assertRendered();
      assertTemplateFieldsEmpty();
      assertGlobalFieldsNotRendered();

      expect(container).toMatchSnapshot();
   });

   it("variables - test", () => {
      const variables = dtestData.dPromptVariables();
      variables[0].name = " ";
      const globalFields = dtestData.dGlobalPromptFields();
      const globalFieldIds = dtestData.dGlobalPromptFieldIds();

      const { container } = render(
         <TestWrapper
            fields={variables}
            globalFields={globalFields}
            globalFieldIds={globalFieldIds}
            detectedVariables={[]}
            onAddField={jest.fn()}
            onRemoveField={jest.fn()}
            onAddGlobalFieldIds={jest.fn()}
            onRemoveGlobalFieldId={jest.fn()}
         />
      );

      assertRendered();
      assertTemplateFieldsRendered();
      assertGlobalFieldsRendered();

      expect(container).toMatchSnapshot();
   });
});

describe("PromptVariables functionality tests", () => {
   beforeEach(() => {
      jest.clearAllMocks();
   });

   it("add global variable btn clicked - test", async () => {
      const variables = dtestData.dPromptVariables();
      const globalFields = dtestData.dGlobalPromptFields();
      const addGlobalFieldFn = jest.fn();

      render(
         <TestWrapper
            fields={variables}
            globalFields={globalFields}
            globalFieldIds={[]}
            detectedVariables={[]}
            onAddField={jest.fn()}
            onRemoveField={jest.fn()}
            onAddGlobalFieldIds={addGlobalFieldFn}
            onRemoveGlobalFieldId={jest.fn()}
         />
      );

      assertRendered();
      expect(addGlobalFieldFn).not.toHaveBeenCalled();

      const globalFieldBtn = screen.getByTestId(
         "global-template-fields-picker"
      );
      await userEvent.click(globalFieldBtn);

      const fieldOption1 = screen.getAllByTestId("field-option")[0];
      await userEvent.click(fieldOption1);

      const addBtn = screen.getByTestId("add-fields-btn");
      await userEvent.click(addBtn);

      const globalField = globalFields[0];

      expect(addGlobalFieldFn).toHaveBeenCalledTimes(1);
      expect(addGlobalFieldFn).toHaveBeenCalledWith([globalField.id]);
   });

   it("remove global variable btn clicked - test", async () => {
      const variables = dtestData.dPromptVariables();
      const globalFields = dtestData.dGlobalPromptFields();
      const globalField = globalFields[0];
      const globalFieldIds = [globalField.id];
      const removeGlobalFieldFn = jest.fn();

      render(
         <TestWrapper
            fields={variables}
            globalFields={globalFields}
            globalFieldIds={globalFieldIds}
            detectedVariables={[]}
            onAddField={jest.fn()}
            onRemoveField={jest.fn()}
            onAddGlobalFieldIds={jest.fn()}
            onRemoveGlobalFieldId={removeGlobalFieldFn}
         />
      );

      assertRendered();
      expect(removeGlobalFieldFn).not.toHaveBeenCalled();

      const removeGlobalFieldBtn = screen.getByTestId(
         "remove-global-field-btn"
      );
      await userEvent.click(removeGlobalFieldBtn);

      expect(removeGlobalFieldFn).toHaveBeenCalledTimes(1);
      expect(removeGlobalFieldFn).toHaveBeenCalledWith(globalField.id);
   });

   it("add prompt variable btn clicked - test", async () => {
      const variables = dtestData.dPromptVariables();
      const detectedVariables = [variables[0].name];
      const addFieldFn = jest.fn();

      render(
         <TestWrapper
            fields={variables}
            globalFields={[]}
            globalFieldIds={[]}
            detectedVariables={detectedVariables}
            onAddField={addFieldFn}
            onRemoveField={jest.fn()}
            onAddGlobalFieldIds={jest.fn()}
            onRemoveGlobalFieldId={jest.fn()}
         />
      );

      assertRendered();
      expect(addFieldFn).not.toHaveBeenCalled();

      const addBtn = screen.getByTestId("add-btn");
      await userEvent.click(addBtn);
      expect(addFieldFn).toHaveBeenCalledTimes(1);
   });

   it("remove prompt variable btn clicked - test", async () => {
      const variables = dtestData.dPromptVariables();
      const detectedVariables = [variables[0].name];
      const removeFieldFn = jest.fn();

      render(
         <TestWrapper
            fields={variables}
            globalFields={[]}
            globalFieldIds={[]}
            detectedVariables={detectedVariables}
            onAddField={jest.fn()}
            onRemoveField={removeFieldFn}
            onAddGlobalFieldIds={jest.fn()}
            onRemoveGlobalFieldId={jest.fn()}
         />
      );

      assertRendered();
      expect(removeFieldFn).not.toHaveBeenCalled();

      const removeBtn = screen.getAllByTestId("remove-btn")[0];
      await userEvent.click(removeBtn);
      expect(removeFieldFn).toHaveBeenCalledTimes(1);
   });

   it("handleDragEnd - test", async () => {
      const fields = dtestData.dPromptVariables();

      render(
         <TestWrapper
            fields={fields}
            globalFields={[]}
            globalFieldIds={[]}
            detectedVariables={[]}
            onAddField={jest.fn()}
            onRemoveField={jest.fn()}
            onAddGlobalFieldIds={jest.fn()}
            onRemoveGlobalFieldId={jest.fn()}
         />
      );

      assertRendered();
      expect(resolveDragEndMock).not.toHaveBeenCalled();

      const activeId = fields[0].id;
      const overId = fields[1].id;
      const event: DragEndEvent = ctestData.dndDragEndEvent(activeId, overId);

      mockOnDragEndFn!(event);

      expect(resolveDragEndMock).toHaveBeenCalledTimes(1);
      expect(resolveDragEndMock).toHaveBeenCalledWith(
         event,
         fields,
         expect.any(Function)
      );
   });
});
