// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptVariables rendering tests variables - test 1`] = `
<div>
  <section
    class="space-y-5"
    data-testid="prompt-variables"
  >
    <div
      class="mb-1 space-y-3"
    >
      <div>
        <p
          class="text-xs font-semibold tracking-widest text-slate-400 uppercase"
        >
          Platzhalter konfigurieren
        </p>
        <p
          class="mt-1 text-sm text-slate-500"
        >
          Legen Sie fest, wie jeder Platzhalter im Formular beim Anwenden des Prompts erscheint
        </p>
      </div>
      <div
        class="flex items-center justify-end gap-2"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
          data-slot="button"
          data-testid="add-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus mr-1 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Platzhalter hinzufügen
        </button>
        <div
          data-slot="popover"
          data-testid="mock-react-popover-root"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
            data-slot="popover-trigger"
            data-testid="global-template-fields-picker"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-braces mr-1 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 3H7a2 2 0 0 0-2 2v5a2 2 0 0 1-2 2 2 2 0 0 1 2 2v5c0 1.1.9 2 2 2h1"
              />
              <path
                d="M16 21h1a2 2 0 0 0 2-2v-5c0-1.1.9-2 2-2a2 2 0 0 1-2-2V5a2 2 0 0 0-2-2h-1"
              />
            </svg>
            Globale Platzhalter
          </button>
          <div
            data-testid="mock-react-popover-portal"
          />
        </div>
      </div>
    </div>
    <div
      class="space-y-2"
      data-testid="prompt-global-variables"
    >
      <p
        class="text-xs font-semibold tracking-widest text-slate-400 uppercase"
      >
        Globale Platzhalter
      </p>
      <div
        class="flex items-center justify-between rounded-lg border px-4 py-3 border-orange-200 bg-orange-50"
        data-testid="prompt-global-variable"
      >
        <div
          class="grid flex-1 grid-cols-[minmax(160px,1fr)_100px_60px_160px] items-center gap-3"
        >
          <div
            class="min-w-0 truncate"
          >
            <span
              class="text-sm font-medium text-slate-900"
            >
              label 0
            </span>
            <code
              class="ml-2 font-mono text-xs text-slate-500"
            >
              {{name_0}}
            </code>
          </div>
          <span
            class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs"
            data-slot="badge"
          >
            TEXT
          </span>
          <div>
            <span
              class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground text-xs"
              data-slot="badge"
            >
              Pflicht
            </span>
          </div>
          <div
            class="mx-auto"
          >
            <span
              class="inline-flex items-center gap-1 rounded-full bg-orange-100 px-2 py-1 text-xs text-orange-800"
              data-testid="status-badge"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-alert h-3 w-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="8"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12.01"
                  y1="16"
                  y2="16"
                />
              </svg>
              Nicht verwendet
            </span>
          </div>
        </div>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
          data-slot="button"
          data-testid="remove-global-field-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 11v6"
            />
            <path
              d="M14 11v6"
            />
            <path
              d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
            />
            <path
              d="M3 6h18"
            />
            <path
              d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="space-y-2"
      data-testid="fields"
    >
      <p
        class="text-xs font-semibold tracking-widest text-slate-400 uppercase"
      >
        Prompt Platzhalter
      </p>
      <div
        data-testid="mock-dnd-context"
      >
        <div
          class="space-y-4"
        >
          <div
            aria-describedby=""
            aria-disabled="false"
            aria-roledescription="sortable"
            data-testid="prompt-variable"
            role="button"
            style="opacity: 1; transition: transform 0ms linear;"
            tabindex="0"
          >
            <div
              class="flex items-center justify-between rounded-lg border px-4 py-3 border-orange-200 bg-orange-50"
              data-testid="variable-collapsed"
            >
              <button
                class="mr-2 shrink-0 cursor-grab touch-none text-slate-300 hover:text-slate-400"
                data-testid="drag-handle-btn"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
              <div
                class="grid flex-1 grid-cols-[minmax(160px,1fr)_100px_60px_160px] items-center gap-3"
              >
                <div
                  class="min-w-0 truncate"
                >
                  <span
                    class="text-sm font-medium text-slate-900"
                  >
                    label 0
                  </span>
                  <code
                    class="ml-2 font-mono text-xs text-slate-500"
                  >
                    {{ }}
                  </code>
                </div>
                <span
                  class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs"
                  data-slot="badge"
                >
                  AUSWAHL
                </span>
                <div>
                  <span
                    class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground text-xs"
                    data-slot="badge"
                  >
                    Pflicht
                  </span>
                </div>
                <div
                  class="mx-auto"
                >
                  <span
                    class="inline-flex items-center gap-1 rounded-full bg-orange-100 px-2 py-1 text-xs text-orange-800"
                    data-testid="status-badge"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-circle-alert h-3 w-3"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                      <line
                        x1="12"
                        x2="12"
                        y1="8"
                        y2="12"
                      />
                      <line
                        x1="12"
                        x2="12.01"
                        y1="16"
                        y2="16"
                      />
                    </svg>
                    Nicht verwendet
                  </span>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 has-[>svg]:px-2.5 shrink-0 cursor-pointer p-1"
                  data-slot="button"
                  data-testid="expand-btn"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-pencil h-3.5 w-3.5 text-slate-500"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                    />
                    <path
                      d="m15 5 4 4"
                    />
                  </svg>
                </button>
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
                  data-slot="button"
                  data-testid="remove-btn"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 11v6"
                    />
                    <path
                      d="M14 11v6"
                    />
                    <path
                      d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                    />
                    <path
                      d="M3 6h18"
                    />
                    <path
                      d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            aria-describedby=""
            aria-disabled="false"
            aria-roledescription="sortable"
            data-testid="prompt-variable"
            role="button"
            style="opacity: 1; transition: transform 0ms linear;"
            tabindex="0"
          >
            <div
              class="flex items-center justify-between rounded-lg border px-4 py-3 border-orange-200 bg-orange-50"
              data-testid="variable-collapsed"
            >
              <button
                class="mr-2 shrink-0 cursor-grab touch-none text-slate-300 hover:text-slate-400"
                data-testid="drag-handle-btn"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
              <div
                class="grid flex-1 grid-cols-[minmax(160px,1fr)_100px_60px_160px] items-center gap-3"
              >
                <div
                  class="min-w-0 truncate"
                >
                  <span
                    class="text-sm font-medium text-slate-900"
                  >
                    label 1
                  </span>
                  <code
                    class="ml-2 font-mono text-xs text-slate-500"
                  >
                    {{field_1}}
                  </code>
                </div>
                <span
                  class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs"
                  data-slot="badge"
                >
                  AUSWAHL
                </span>
                <div>
                  <span
                    class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground text-xs"
                    data-slot="badge"
                  >
                    Pflicht
                  </span>
                </div>
                <div
                  class="mx-auto"
                >
                  <span
                    class="inline-flex items-center gap-1 rounded-full bg-orange-100 px-2 py-1 text-xs text-orange-800"
                    data-testid="status-badge"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-circle-alert h-3 w-3"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                      <line
                        x1="12"
                        x2="12"
                        y1="8"
                        y2="12"
                      />
                      <line
                        x1="12"
                        x2="12.01"
                        y1="16"
                        y2="16"
                      />
                    </svg>
                    Nicht verwendet
                  </span>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 has-[>svg]:px-2.5 shrink-0 cursor-pointer p-1"
                  data-slot="button"
                  data-testid="expand-btn"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-pencil h-3.5 w-3.5 text-slate-500"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                    />
                    <path
                      d="m15 5 4 4"
                    />
                  </svg>
                </button>
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
                  data-slot="button"
                  data-testid="remove-btn"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 11v6"
                    />
                    <path
                      d="M14 11v6"
                    />
                    <path
                      d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                    />
                    <path
                      d="M3 6h18"
                    />
                    <path
                      d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            aria-describedby=""
            aria-disabled="false"
            aria-roledescription="sortable"
            data-testid="prompt-variable"
            role="button"
            style="opacity: 1; transition: transform 0ms linear;"
            tabindex="0"
          >
            <div
              class="flex items-center justify-between rounded-lg border px-4 py-3 border-orange-200 bg-orange-50"
              data-testid="variable-collapsed"
            >
              <button
                class="mr-2 shrink-0 cursor-grab touch-none text-slate-300 hover:text-slate-400"
                data-testid="drag-handle-btn"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-grip-vertical h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </button>
              <div
                class="grid flex-1 grid-cols-[minmax(160px,1fr)_100px_60px_160px] items-center gap-3"
              >
                <div
                  class="min-w-0 truncate"
                >
                  <span
                    class="text-sm font-medium text-slate-900"
                  >
                    label 2
                  </span>
                  <code
                    class="ml-2 font-mono text-xs text-slate-500"
                  >
                    {{field_2}}
                  </code>
                </div>
                <span
                  class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs"
                  data-slot="badge"
                >
                  AUSWAHL
                </span>
                <div>
                  <span
                    class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground text-xs"
                    data-slot="badge"
                  >
                    Pflicht
                  </span>
                </div>
                <div
                  class="mx-auto"
                >
                  <span
                    class="inline-flex items-center gap-1 rounded-full bg-orange-100 px-2 py-1 text-xs text-orange-800"
                    data-testid="status-badge"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-circle-alert h-3 w-3"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                      <line
                        x1="12"
                        x2="12"
                        y1="8"
                        y2="12"
                      />
                      <line
                        x1="12"
                        x2="12.01"
                        y1="16"
                        y2="16"
                      />
                    </svg>
                    Nicht verwendet
                  </span>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 has-[>svg]:px-2.5 shrink-0 cursor-pointer p-1"
                  data-slot="button"
                  data-testid="expand-btn"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-pencil h-3.5 w-3.5 text-slate-500"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                    />
                    <path
                      d="m15 5 4 4"
                    />
                  </svg>
                </button>
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
                  data-slot="button"
                  data-testid="remove-btn"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 11v6"
                    />
                    <path
                      d="M14 11v6"
                    />
                    <path
                      d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                    />
                    <path
                      d="M3 6h18"
                    />
                    <path
                      d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`PromptVariables rendering tests variables empty - test 1`] = `
<div>
  <section
    class="space-y-5"
    data-testid="prompt-variables"
  >
    <div
      class="mb-1 space-y-3"
    >
      <div>
        <p
          class="text-xs font-semibold tracking-widest text-slate-400 uppercase"
        >
          Platzhalter konfigurieren
        </p>
        <p
          class="mt-1 text-sm text-slate-500"
        >
          Legen Sie fest, wie jeder Platzhalter im Formular beim Anwenden des Prompts erscheint
        </p>
      </div>
      <div
        class="flex items-center justify-end gap-2"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
          data-slot="button"
          data-testid="add-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus mr-1 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Platzhalter hinzufügen
        </button>
        <div
          data-slot="popover"
          data-testid="mock-react-popover-root"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
            data-slot="popover-trigger"
            data-testid="global-template-fields-picker"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-braces mr-1 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 3H7a2 2 0 0 0-2 2v5a2 2 0 0 1-2 2 2 2 0 0 1 2 2v5c0 1.1.9 2 2 2h1"
              />
              <path
                d="M16 21h1a2 2 0 0 0 2-2v-5c0-1.1.9-2 2-2a2 2 0 0 1-2-2V5a2 2 0 0 0-2-2h-1"
              />
            </svg>
            Globale Platzhalter
          </button>
          <div
            data-testid="mock-react-popover-portal"
          />
        </div>
      </div>
    </div>
    <div
      class="mt-3 rounded-lg border-2 border-dashed border-slate-200 bg-slate-50 py-12 text-center"
      data-testid="fields-empty"
    >
      <p
        class="text-slate-500"
      >
        Noch keine Platzhalter konfiguriert
      </p>
      <p
        class="mt-1 text-sm text-slate-400"
      >
        Klicken Sie auf "Platzhalter hinzufügen", um zu beginnen
      </p>
    </div>
  </section>
</div>
`;
